--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ body{
 
 /* ---------------CONTENT--------------- */
 .content{
-    width: 55%;
+    width: 50%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -42,6 +42,7 @@ body{
     background: hsl(223, 19%, 93%);
     text-align: center;
     display: flex;
+    order: 1;
     flex-direction: column;
     justify-content: space-between;
     height: 5.5rem;
@@ -54,6 +55,9 @@ body{
 }
 .plus, .minus{
     cursor: pointer;
+}
+.text-sec{
+    order:2
 }
 .profile{
     display: flex;
@@ -94,6 +98,7 @@ body{
 .comment-text-div .comment-text{
     color:hsl(211, 10%, 45%);
     line-height: 1.3;
+    font-size: 1rem;
 }
 
 
@@ -111,7 +116,8 @@ body{
     justify-content: space-between;
 }
 .reply-pic {
-    width: 2rem;
+    width: 2.5rem;
+    order: 1;
 }
 .reply-pic img{
     display: block;
@@ -119,12 +125,16 @@ body{
 }
 .reply-text{
     width: 75%;
+    order: 2;
 }
 .reply-text textarea{
     resize: none;
     width: 100%;
     padding: .5rem;
     height: 4rem;
+}
+.reply-btn-container{
+    order: 3;
 }
 .reply-btn-container .reply-btn{
     padding: .8rem 1.5rem;
@@ -194,44 +204,75 @@ body{
 
 
 
-
-
-
-
-
-
-/* ---------------700px--------------- */
-@media screen and (max-width:700px){
-    .content{
-        width: 90%;
-    }
-    /* reply should come down 
-    - use position absolute
-    -and position it to the down of the page
-    */
-    
-    /* rating should come down 
-    -use position absolute
-    -and make use of flex direction
-    */
-}
-
-
-
-
-
-
-
 /* ---------------1000px--------------- */
-@media screen and (max-width:1000px){
+@media screen and (max-width:1000px) and (min-width:900px) {
     .content{
         width: 70%;
     }
 }
 
 /* ---------------900px--------------- */
-@media screen and (max-width:900px){
+@media screen and (max-width:900px) and (min-width:700px){
     .content{
         width: 80%;
     }
 }
+
+
+/* ---------------700px--------------- */
+@media screen and (max-width:700px){
+    .content{
+        width: 95%;
+    }
+    .msg-content.posted-reply{
+        width:95% ;
+    }    
+    .msg-content{
+        padding: 1rem;
+        position: relative;
+    }
+    /*  */
+    .comment-sec{
+        display: block;
+    }
+    .rating-sec{
+    padding:  .7rem;
+    background: hsl(223, 19%, 93%);
+    display: flex;
+    flex-direction: row;
+    width: 5.7rem;
+    align-items: center;
+    height: unset;
+    border-radius: 5px;
+    margin-top: 1rem;
+}
+.reply, .del-ed{
+    position: absolute;
+    bottom: 1.8rem;
+    right: 2rem;
+}
+.reply-content{
+    display: block;
+    position: relative;
+}
+.reply-text{
+    width: 100%;
+}
+.reply-pic{
+    margin-top: 1rem;
+    margin-left: 1rem;
+} 
+.reply-btn-container{
+    position: absolute;
+    right: 1.3rem;
+    bottom: 1.3rem;
+}
+    
+}
+
+
+
+
+
+
+
