finally finished the ui

--- a/main.css
+++ b/main.css
@@ -16,6 +16,7 @@ body{
 .container{
     width: 100%;
     padding-top: 3rem;
+    /* z-index: 1; */
 }
 
 /* ---------------CONTENT--------------- */
@@ -152,7 +153,6 @@ body{
 /* ---------------POSTED-REPLY--------------- */
 .posted-reply-container{
     width: 100%;
-    /* border-left: 2px solid hsl(211, 10%, 45%); */
 }
 .msg-content.posted-reply{
     width:90% ;
@@ -200,6 +200,72 @@ body{
     height: 5rem;
 }
 
+/* ---------------MODAL OVERLAY--------------- */
+.active-modal{
+    display: none;
+}
+.modal-overlay{
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: none;/*toggle argument*/
+    background:hsla(0, 0%, 0%, 0.404);
+}
+.modal-container{
+    padding: 2rem;
+    width: 27%;
+    background: hsl(0, 0%, 100%);
+    border-radius: 10px;
+    color: hsl(212, 24%, 26%);
+
+}
+.modal-header{
+    margin-bottom: 1rem;
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+.modal-text{
+    word-spacing: 2px;
+    font-size: 16px;
+    line-height: 1.3;
+    margin-bottom: 1rem;
+}
+.modal-btn{
+    display: flex;
+    justify-content: space-between;
+}
+.modal-btn button{
+    padding: .7rem 1.3rem;
+    border-radius: 5px;
+    border: 0;
+    color: hsl(0, 0%, 100%) ;
+}
+.modal-btn button.cancel{
+    background: hsl(211, 10%, 45%);
+}
+.modal-btn button.delete{
+    background: hsl(358, 79%, 66%);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -222,7 +288,7 @@ body{
 /* ---------------700px--------------- */
 @media screen and (max-width:700px){
     .content{
-        width: 95%;
+        width: 90%;
     }
     .msg-content.posted-reply{
         width:95% ;
@@ -230,6 +296,9 @@ body{
     .msg-content{
         padding: 1rem;
         position: relative;
+    }
+    .posted-reply-container{
+    border-left: 1px solid hsl(211, 10%, 45%);
     }
     /*  */
     .comment-sec{
@@ -245,29 +314,32 @@ body{
     height: unset;
     border-radius: 5px;
     margin-top: 1rem;
-}
-.reply, .del-ed{
-    position: absolute;
-    bottom: 1.8rem;
-    right: 2rem;
-}
-.reply-content{
-    display: block;
-    position: relative;
-}
-.reply-text{
-    width: 100%;
-}
-.reply-pic{
-    margin-top: 1rem;
-    margin-left: 1rem;
-} 
-.reply-btn-container{
-    position: absolute;
-    right: 1.3rem;
-    bottom: 1.3rem;
-}
-    
+    }
+    .reply, .del-ed{
+        position: absolute;
+        bottom: 1.8rem;
+        right: 2rem;
+    }
+    .reply-content{
+        display: block;
+        position: relative;
+    }
+    .reply-text{
+        width: 100%;
+    }
+    .reply-pic{
+        margin-top: 1rem;
+        margin-left: 1rem;
+    } 
+    .reply-btn-container{
+        position: absolute;
+        right: 1.3rem;
+        bottom: 1.3rem;
+    }
+    .modal-container{
+        width: 90%;
+    }
+        
 }
 
 
