--- a/main.css
+++ b/main.css
@@ -213,7 +213,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    display: none;/*toggle argument*/
+    /* display: none;toggle argument */
     background:hsla(0, 0%, 0%, 0.404);
 }
 .modal-container{
@@ -288,7 +288,7 @@ body{
 /* ---------------700px--------------- */
 @media screen and (max-width:700px){
     .content{
-        width: 90%;
+        width: 95%;
     }
     .msg-content.posted-reply{
         width:95% ;
