--- a/main.css
+++ b/main.css
@@ -209,20 +209,20 @@ body{
 }
 
 /* ---------------MODAL OVERLAY--------------- */
-.active-modal{
-    display: none;
-}
 .modal-overlay{
     height: 100vh;
     width: 100%;
     position: fixed;
     top: 0;
     left: 0;
-    display: flex;
+    /* display: flex; */
     align-items: center;
     justify-content: center;
-    display: none;/*toggle argument*/
+    display: none;
     background:hsla(0, 0%, 0%, 0.404);
+}
+.active-modal{
+    display: flex;
 }
 .modal-container{
     padding: 2rem;
